# arkirust

./: Cargo.toml  README.md  token.json
graphql/mikro/: schema.graphql
graphql/rekuest/: create_template.graphql  get_provision.graphql
hierarchy.zarr/array/: zarr.json
hierarchy.zarr/array/c/0/: 0  1
hierarchy.zarr/array/c/1/: 0  1
src/: app.rs  lib.rs  main.rs
src/fakts/: fakts_protocol.rs  funcs.rs  mod.rs
src/mikro/: api.rs  client.rs  datalayer.rs  fakt.rs  mod.rs  store.rs  upload.rs
src/rekuest/: agent.rs  agent_protocol.rs  api.rs  client.rs  definition.rs  fakt.rs  main.rs  mod.rs  ports.rs  registry.rs
src/unlok/: client.rs  fakt.rs  mod.rs  token.rs
