[package]
name = "arkirust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4.2"
serde = "1.0.216"
serde_json = "1.0.133"
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
