[package]
name = "arkirust"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4.2"
serde = "1.0.216"
serde_json = "1.0.133"
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
zarrs = { version = "0.18.0", features = ["async"] }
ndarray = "0.16.1"
uuid = { version = "1.11.0", features = ["v4"] }
zarrs_object_store = "0.3.0"
object_store = { version = "0.11.1", features = ["aws"] }
zarrs_storage = { version = "0.3.0", features = ["async"] }
ndarray-rand = "0.15.0"
rand_isaac = "0.3.0"
